# EdgeUcation

./: README.md
ios_bridge/: Cargo.toml  build.sh  cbindgen.toml  ios_bridge.h
ios_bridge/ios_bridge.xcframework/: Info.plist
ios_bridge/ios_bridge.xcframework/ios-arm64/Headers/: ios_bridge.h
ios_bridge/src/: lib.rs
ios_vlm/: AppCopy.swift  ChatMessage.swift  ContentView.swift  VLMViewModel.swift  ios_vlmApp.swift
ios_vlm.xcodeproj/: project.pbxproj
ios_vlm.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios_vlm.xcodeproj/project.xcworkspace/xcuserdata/ericbuehler.xcuserdatad/: UserInterfaceState.xcuserstate
ios_vlm.xcodeproj/xcuserdata/ericbuehler.xcuserdatad/xcschemes/: xcschememanagement.plist
